# discovered-weekly

./: LICENSE  README.md  discovered_weekly.py  get_refresh_token.py  pyproject.toml  sample.env
.github/workflows/: run.yml
